db-poc-payment/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-poc-payment-service
spec:
  selector:
    app: db-poc-payment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
