db-poc-payment/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-poc-payment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # If  app is served at the root path
spec:
  rules:
    - host: your-app.your-domain.com # Replace with  actual domain
      http:
        paths:
          - path: / # Or a specific path like /api
            pathType: Prefix
            backend:
              service:
                name: db-poc-payment-service
                port:
                  number: 80
